[project]
name = "intra-file-share"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.6",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "sentry-sdk>=2.56.0",
    "uvicorn>=0.40.0",
]

[tool.uv.workspace]
members = [
"intra_file_share"
]
